--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,8 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install mkdocs
-          pip install mkdocs-material
+          pip install mkdocs mkdocs-material mkdocstrings
           
       - name: Deploy
         run: mkdocs gh-deploy --force
