--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install mkdocs mkdocs-material mkdocstrings
+          pip install mkdocs mkdocs-material mkdocstrings mkdocstrings_handlers
           
       - name: Deploy
         run: mkdocs gh-deploy --force
