--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,6 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install mkdocs mkdocs-material mkdocstrings-python          
+          pip install mkdocs mkdocs-material mkdocstrings-python
+          pip install -e .  
       - name: Deploy
         run: mkdocs gh-deploy --force
